[gd_scene load_steps=6 format=3 uid="uid://dattmmpua3tgk"]

[ext_resource type="Script" path="res://scenes/scripts/tutorial.gd" id="1_61wxi"]
[ext_resource type="Texture2D" uid="uid://vmkslu1rkvqn" path="res://assets/tutorial_man.png" id="1_vgxjt"]
[ext_resource type="Texture2D" uid="uid://c8hwxs7px303j" path="res://assets/dialogue_box.png" id="3_xtn0b"]
[ext_resource type="Theme" uid="uid://cu7bkvsimn3a" path="res://components/buttons/button_theme.tres" id="4_8novw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sqha4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vgxjt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_61wxi")

[node name="Panel" type="Panel" parent="."]
offset_right = 1925.0
offset_bottom = 1086.0

[node name="tutorial_man" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(339, 1450)
scale = Vector2(0.467236, 0.467236)
sprite_frames = SubResource("SpriteFrames_sqha4")

[node name="dialogue_box" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(777, 444)
scale = Vector2(1.83889, 1.83889)
texture = ExtResource("3_xtn0b")

[node name="DiaHandler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dia1" type="Label" parent="DiaHandler"]
visible = false
custom_minimum_size = Vector2(486, 284)
layout_mode = 0
offset_left = 524.0
offset_top = 255.0
offset_right = 1010.0
offset_bottom = 539.0
theme = ExtResource("4_8novw")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 3
text_direction = 2
